[gd_scene load_steps=3 format=3 uid="uid://vrqvy3xgj507"]

[ext_resource type="Script" uid="uid://golxnwynjoul" path="res://scenes/minimenu.gd" id="1_86nuy"]
[ext_resource type="FontFile" uid="uid://bh5bwya71s3eh" path="res://fonts/Bear Days.ttf" id="2_8oj1h"]

[node name="MiniMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_86nuy")
mobile_scale_multiplier = 1.0
metadata/_custom_type_script = "uid://d38n3go2r0oya"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -256.0
offset_right = 384.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -288.5
offset_top = -122.0
offset_right = 288.5
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.9, 1.2)
pivot_offset = Vector2(288, 38)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_8oj1h")
theme_override_font_sizes/font_size = 120
text = "DRAW !"
horizontal_alignment = 1

[node name="btn1" type="Button" parent="."]
layout_mode = 0
offset_left = -326.0
offset_top = 130.0
offset_right = -24.45163
offset_bottom = 212.0
theme_override_font_sizes/font_size = 24
text = "BACK TO MENU"

[node name="btn2" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 29.0
offset_top = 130.0
offset_right = 330.54837
offset_bottom = 212.0
theme_override_font_sizes/font_size = 24
text = "PLAY AGAIN"

[connection signal="pressed" from="btn1" to="." method="_on_btn_1_pressed"]
[connection signal="pressed" from="btn2" to="." method="_on_btn_2_pressed"]
